fixes the text wrapping for timestamp

--- a/src/app/app.component.styl
+++ b/src/app/app.component.styl
@@ -53,6 +53,7 @@ input[type="text"]
   left 14px
   bottom -20px
   font-size .8em
+  white-space nowrap
 
 .messageContainer
   position: relative
